--- a/cars/package.json
+++ b/cars/package.json
@@ -11,7 +11,9 @@
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
